--- a/css/food_style2.css
+++ b/css/food_style2.css
@@ -310,16 +310,24 @@ nav ul li a{
 /*세번째 디자인 박스*/
 .box2{
     text-align: center;
+    display: flex;
+    justify-content: space-between;
 }
-/*세번째 디자인 박스 내 텍스트*/
+/*세번째 콘텐츠 박스 내 텍스트*/
 .box2-in{
-    display: inline-block;
+    display: block;
     vertical-align: top;
-    width: 40%;
-    height: 300px;
-    margin: 1%;
-    padding: 1% 3%;
-    background: #eaeaea;
+    background: #E6E8E9;      /*조절 가능*/
+    width: 30%;
+    padding: 0 1%;
+}
+.t1{
+    font-size: 1rem;
+    font-family: 'GmarketSansBold';
+    margin: 5% 0 0 0;
+}
+.t2{
+    font-size: 0.8rem;
 }
 
 
