--- a/css/new_style3.css
+++ b/css/new_style3.css
@@ -32,7 +32,11 @@
     font-style: normal;
 }
 
-
+html{
+    font-size: 18px;
+    line-height: 32px;
+    font-family: 'GmarketSansMedium';
+}
 
 /*바디 설정*/
 body{
@@ -241,7 +245,7 @@ nav ul li a{
 }
 /*첫번째 디자인 왼쪽 이미지*/
 #img2{
-    width: 70%;
+    width: 80%;
     margin: 20px;
 }
 /*첫번째 디자인 오른쪽 설명*/
@@ -260,10 +264,11 @@ nav ul li a{
 }
 /*두번째 디자인 서브타이틀*/
 .subtitle2{
-    width: 55%;
+    width: 60%;
     background: #C7E3E7;
     display: inline-block;
-    margin: 3rem;
+    margin: 2rem;
+    padding: 0.3rem;
 }
 /*두번째 디자인 박스*/
 .box1{
@@ -309,8 +314,7 @@ nav ul li a{
     display: inline-block;
     vertical-align: top;
     width: 40%;
-    height: 300px;
-    margin: 1%;
+    height: 15rem;
     padding: 1% 3%;
     background: #eaeaea;
 }
@@ -327,7 +331,7 @@ nav ul li a{
     display: inline-block;
     vertical-align: top;
     width: 70%;
-    height: 300px;
+    height: 100%;
     margin: 1%;
     padding: 1% 3%;
     background: #eaeaea;
@@ -424,9 +428,10 @@ nav ul li a{
 /*일곱번째 디자인 서브타이틀*/
 .subtitle3{
     width: 25%;
+    height: 100%;
     background: #E6E8E9;
     display: inline-block;
-    margin: 20px;
+    padding: 0.3rem;
 }
 
 
