--- a/css/new_style1.css
+++ b/css/new_style1.css
@@ -32,6 +32,11 @@
     font-style: normal;
 }
 
+html{
+    font-size: 18px;
+    line-height: 32px;
+    font-family: 'GmarketSansMedium';
+}
 
 /*바디 설정*/
 body{
@@ -205,6 +210,7 @@ nav ul li a{
     margin-left: 15%;
     margin-right: 15%;
     /*background-color: beige;*/    /*테스트용*/
+    padding-top: 5%;
     
 }
 /*첫번째 디자인(회색 배경있는 소제목)*/
@@ -238,15 +244,13 @@ nav ul li a{
 }
 /*첫번째 디자인 왼쪽 이미지*/
 #img2{
-    width: 70%;
+    width: 80%;
     margin: 20px;
 }
 /*첫번째 디자인 오른쪽 설명*/
 .line1-right{
     margin: 30px 10px;
 }
-
-
 
 
 /*두번째 디자인*/
@@ -257,10 +261,11 @@ nav ul li a{
 }
 /*두번째 디자인 서브타이틀*/
 .subtitle2{
-    width: 55%;
+    width: 60%;
     background: #C7E3E7;
     display: inline-block;
     margin: 3rem;
+    padding-top: 0.3rem;
 }
 /*두번째 디자인 박스*/
 .box1{
@@ -306,7 +311,7 @@ nav ul li a{
     display: inline-block;
     vertical-align: top;
     width: 40%;
-    height: 300px;
+    height: 18rem;;
     margin: 1%;
     padding: 1% 3%;
     background: #eaeaea;
@@ -323,7 +328,7 @@ nav ul li a{
 /*네번째 디자인 박스*/
 .box3{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 /*네번째 디자인 박스 내 텍스트 1*/
 .box3-in1{
@@ -405,7 +410,8 @@ nav ul li a{
     width: 20%;
     background: #E6E8E9;
     display: inline-block;
-    margin: 20px;
+    margin: 1%;
+    padding-top: 0.3rem;
 }
 
 
