--- a/css/new_style2.css
+++ b/css/new_style2.css
@@ -27,7 +27,11 @@
     font-style: normal;
 }
 
-
+html{
+    font-size: 18px;
+    line-height: 32px;
+    font-family: 'GmarketSansMedium';
+}
 
 
 
@@ -304,10 +308,10 @@ nav ul li a{
 .box2-in{
     display: inline-block;
     vertical-align: top;
-    width: 40%;
-    height: 300px;
+    width: 42%;
+    height: 15rem;
     margin: 1%;
-    padding: 1% 3%;
+    padding: 0 1%;
     background: #eaeaea;
 }
 
@@ -399,12 +403,17 @@ nav ul li a{
     display: flex;
     justify-content: space-around;
 }
+.box5-1{
+    display: flex;
+    justify-content: center;
+}
 /*일곱번째 디자인 서브타이틀*/
 .subtitle3{
     width: 20%;
     background: #E6E8E9;
     display: inline-block;
-    margin: 20px;
+    margin: 1%;
+    padding: 0.3rem;
 }
 
 
